# internal/server/http.go
@@ -7,6 +7,7 @@ import (
 	"github.com/go-kratos/kratos/v2/middleware/selector"
 	"github.com/go-kratos/kratos/v2/transport/http"
 	"github.com/gorilla/handlers"
+	adminV1 "healthmonitor/api/admin/v1"
 	adminAuthV1 "healthmonitor/api/adminauth/v1"
 	bloodStatusV1 "healthmonitor/api/bloodstatus/v1"
 	indexV1 "healthmonitor/api/index/v1"
@@ -26,12 +27,12 @@ func NewHTTPServer(cfg HTTPServerConfig, adminUserUsecase *admin.UserUsecase, jw
 				jwtUsecase,
 				adminUserUsecase,
 			)).Path("/api.adminauth.v1.Auth/Me", "/api.adminauth.v1.Auth/Logout").
-				Prefix("/api.bloodstatus.v1.BloodStatus/").
+				Prefix("/api.bloodstatus.v1.BloodStatus/", "/api.admin.v1.Dashboard/").
 				Build(),
 		),
 		http.Filter(handlers.CORS(
 			handlers.AllowedHeaders([]string{"X-Requested-With", "Content-Type", "Authorization"}),
-			handlers.AllowedMethods([]string{"GET", "POST", "PUT", "HEAD", "OPTIONS"}),
+			handlers.AllowedMethods([]string{"GET", "POST", "PUT", "HEAD", "OPTIONS", "PATCH"}),
 			handlers.AllowedOrigins([]string{"*"}),
 		)),
 	}
@@ -49,5 +50,6 @@ func NewHTTPServer(cfg HTTPServerConfig, adminUserUsecase *admin.UserUsecase, jw
 	indexV1.RegisterIndexHTTPServer(srv, cfg.Index)
 	bloodStatusV1.RegisterBloodStatusHTTPServer(srv, cfg.BloodStatus)
 	adminAuthV1.RegisterAuthHTTPServer(srv, cfg.AdminAuth)
+	adminV1.RegisterDashboardHTTPServer(srv, cfg.Dashboard)
 	return srv
 }
