# openapi.yaml
@@ -3,123 +3,21 @@
 
 openapi: 3.0.3
 info:
-    title: BloodStatus API
+    title: Dashboard API
     version: 0.0.1
 paths:
-    api/v1/blood_status:
+    /admin/v1/dashboard:
         get:
             tags:
-                - BloodStatus
-            operationId: BloodStatus_ListBloodStatus
-            parameters:
-                - name: startTime
-                  in: query
-                  schema:
-                    type: string
-                - name: endTime
-                  in: query
-                  schema:
-                    type: string
+                - Dashboard
+            operationId: Dashboard_Dashboard
             responses:
                 "200":
                     description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/ListBloodStatusReply'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
-        put:
-            tags:
-                - BloodStatus
-            operationId: BloodStatus_UpdateBloodStatus
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/UpdateBloodStatusRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/UpdateBloodStatusReply'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
-        post:
-            tags:
-                - BloodStatus
-            operationId: BloodStatus_CreateBloodStatus
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/CreateBloodStatusRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/CreateBloodStatusReply'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
-    api/v1/blood_status/{id}:
-        get:
-            tags:
-                - BloodStatus
-            operationId: BloodStatus_GetBloodStatus
-            parameters:
-                - name: id
-                  in: path
-                  required: true
-                  schema:
-                    type: string
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/GetBloodStatusReply'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
-        delete:
-            tags:
-                - BloodStatus
-            operationId: BloodStatus_DeleteBloodStatus
-            parameters:
-                - name: id
-                  in: path
-                  required: true
-                  schema:
-                    type: string
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/DeleteBloodStatusReply'
+                                $ref: '#/components/schemas/DashboardReply'
                 default:
                     description: Default error response
                     content:
@@ -128,63 +26,31 @@ paths:
                                 $ref: '#/components/schemas/Status'
 components:
     schemas:
-        BloodStatusRecord:
+        CardList:
             type: object
             properties:
-                id:
+                num:
                     type: string
-                recordDate:
+                changeRatio:
+                    type: number
+                    format: float
+                category:
                     type: string
-                timeOfDay:
-                    type: string
-                beforeAfterMeals:
-                    type: string
-                systolicPressure:
-                    type: integer
-                    format: uint32
-                diastolicPressure:
-                    type: integer
-                    format: uint32
-                pulse:
-                    type: integer
-                    format: uint32
-                mood:
-                    type: string
-                statusSummary:
-                    type: string
-        CreateBloodStatusReply:
+                monthDetails:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/MonthDetails'
+        DashboardReply:
             type: object
             properties:
-                bloodStatus:
-                    $ref: '#/components/schemas/BloodStatusRecord'
-        CreateBloodStatusRequest:
-            type: object
-            properties:
-                recordDate:
-                    type: string
-                timeOfDay:
-                    type: integer
-                    format: enum
-                beforeAfterMeals:
-                    type: integer
-                    format: enum
-                systolicPressure:
-                    type: string
-                diastolicPressure:
-                    type: string
-                pulse:
-                    type: string
-                mood:
-                    type: integer
-                    format: enum
-        DeleteBloodStatusReply:
-            type: object
-            properties: {}
-        GetBloodStatusReply:
-            type: object
-            properties:
-                bloodStatus:
-                    $ref: '#/components/schemas/BloodStatusRecord'
+                cardList:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/CardList'
+                lastSevenRecords:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/LastSevenRecords'
         GoogleProtobufAny:
             type: object
             properties:
@@ -193,13 +59,30 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
-        ListBloodStatusReply:
+        LastSevenRecords:
             type: object
             properties:
-                data:
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/BloodStatusRecord'
+                recordDate:
+                    type: string
+                statusSummary:
+                    type: string
+                systolicPressure:
+                    type: string
+                diastolicPressure:
+                    type: string
+                pulse:
+                    type: string
+                mood:
+                    type: string
+                id:
+                    type: string
+        MonthDetails:
+            type: object
+            properties:
+                num:
+                    type: string
+                month:
+                    type: string
         Status:
             type: object
             properties:
@@ -216,32 +99,5 @@ components:
                         $ref: '#/components/schemas/GoogleProtobufAny'
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
-        UpdateBloodStatusReply:
-            type: object
-            properties:
-                bloodStatus:
-                    $ref: '#/components/schemas/BloodStatusRecord'
-        UpdateBloodStatusRequest:
-            type: object
-            properties:
-                id:
-                    type: string
-                recordDate:
-                    type: string
-                timeOfDay:
-                    type: integer
-                    format: enum
-                beforeAfterMeals:
-                    type: integer
-                    format: enum
-                systolicPressure:
-                    type: string
-                diastolicPressure:
-                    type: string
-                pulse:
-                    type: string
-                mood:
-                    type: integer
-                    format: enum
 tags:
-    - name: BloodStatus
+    - name: Dashboard
